--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,3 +28,8 @@ theme:
     - navigation.indexes
     - header.autohide
     - toc.follow
+
+nav:
+  - Home: index.md
+  - Algemene Plaatselijke Verordening: apv.md
+  - Wetboek: wetboek.md
