--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: FiveR - Hulpdiensten Nederland
-site_url: 'https://fivernl.github.io/docs/'
+site_url: 'https://fivernl.github.io/fivernl.github.io/'
 site_description: 'APV & meer van FiveR'
 site_author: 'stijn_gamet'
 
