--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,8 @@ theme:
     - navigation.indexes
     - header.autohide
     - toc.follow
+    - content.action.edit
+    - content.action.view
 
 nav:
   - Home: index.md
