--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ theme:
       toggle:
         icon: material/weather-sunny
         name: Switch to system preference
+  language: nl
   features:
     - navigation.instant
     - navigation.tracking
