--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,8 +25,8 @@ theme:
   language: nl
   features:
     - navigation.instant
-    - navigation.tracking
-  #  - navigation.indexes
+   # - navigation.tracking
+    - navigation.indexes
     - header.autohide
     - toc.follow
 
