--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,8 +37,15 @@ nav:
 
 extra:
   consent:
+    title: Cookie consent
+    description: >- 
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
     cookies:
       analytics: FiveR - Hulpdiensten Nederland
-          actions:
+    actions:
       - accept
-      - manage 
+      - manage
+      - reject
