--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,8 @@ site_url: 'https://fivernl.github.io/fivernl.github.io/'
 site_description: 'APV & meer van FiveR'
 site_author: 'stijn_gamet'
 
-repo_name: 'fivernl/fivernl.github.io'
-repo_url: 'https://github.com/fivernl/fivernl.github.io/'
+#repo_name: 'fivernl/fivernl.github.io'
+#repo_url: 'https://github.com/fivernl/fivernl.github.io/'
 
 copyright: Copyright &copy; 2023 FiveR - Hulpdiensten Nederland
 
