--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -41,8 +41,13 @@ markdown_extensions:
   - pymdownx.keys
   - pymdownx.mark
   - pymdownx.tilde
+  - attr_list
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
 nav:
   - Home: index.md
   - Algemene Plaatselijke Verordening: apv.md
   - Wetboek: wetboek.md
+  - Commands: commands.md
