--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: FiveR - Hulpdiensten Nederland
 site_url: 'https://fivernl.github.io/fivernl.github.io/'
-site_description: 'APV & meer van FiveR'
+site_description: 'Hier vind je van alles over FiveR. Zoals het APV, Wetboek, Commands & veel meer..'
 site_author: 'stijn_gamet'
 
 #repo_name: 'fivernl/fivernl.github.io'
