--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,8 +46,12 @@ markdown_extensions:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
 
+plugins:
+  - search:
+      lang: nl
+
 nav:
   - Home: index.md
   - Algemene Plaatselijke Verordening: apv.md
-  - Wetboek: wetboek.md
+# - Wetboek: wetboek.md
   - Commands: commands.md
