--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,8 @@ theme:
     - navigation.indexes
     - header.autohide
     - toc.follow
+    - content.action.edit
+    - content.action.view
   favicon: img/fiver-icon.png
   #logo: img/fiver-icon.png
 
