--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: FiveR - Hulpdiensten Nederland
-site_url: 'https://fivernl.github.io/fivernl.github.io/'
+site_url: 'https://stijn-gamettwee.github.io/fivernl/'
 site_description: 'Hier vind je van alles over FiveR. Zoals het APV, Wetboek, Commands & veel meer..'
 site_author: 'stijn_gamet'
 
