--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 site_name: FiveR - Hulpdiensten Nederland
 site_url: 'https://stijn-gamettwee.github.io/fivernl/'
-site_description: 'Hier vind je van alles over FiveR. Zoals het APV, Wetboek, Commands & veel meer..'
+site_description: 'Hier vind je van alles over FiveR. Zoals het APV, Wetboek, Commands, Donatie & veel meer..'
 site_author: 'stijn_gamet'
 
 copyright: Copyright &copy; 2023 FiveR - Hulpdiensten Nederland | stijn_gamet
